[package]
name = "observability"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/houseme/observability"
description = "A simple observability library for Rust applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/houseme/observability"
#documentation = "https://docs.rs/observability"
readme = "README.md"
keywords = ["observability", "logging", "tracing", "opentelemetry"]
categories = ["development-tools::profiling", "development-tools::debugging", "api-bindings", "asynchronous"]

[dependencies]
tokio = { version = "1.44.0", features = ["sync", "fs", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
config = { version = "0.15.9" }
tracing = { version = "0.1.41" }
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "tracing-log", "time", "local-time", "json", "serde"] }
opentelemetry = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.28.0"
opentelemetry-semantic-conventions = { version = "0.28.0", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = { version = "0.28.1", features = ["experimental_use_tracing_span_context", "experimental_metadata_attributes"] }
opentelemetry-stdout = "0.28.0"
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.87"
tracing-core = "0.1.33"
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"
local-ip-address = "0.6.3"

[dependencies.rdkafka]
version = "0.37.0"
optional = true

[dependencies.reqwest]
version = "0.12.13"
default-features = false
features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration", "stream"]
optional = true

[features]
default = ["file"]
kafka = ["dep:rdkafka", "dep:serde_json"]
webhook = ["dep:reqwest"]
file = []
