[package]
name = "observability"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/houseme/observability"
description = "A simple observability library for Rust applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/houseme/observability"
#documentation = "https://docs.rs/observability"
readme = "README.md"
keywords = ["observability", "logging", "tracing", "opentelemetry"]
categories = ["development-tools::profiling", "development-tools::debugging", "api-bindings", "asynchronous"]

[dependencies]
tokio = { version = "1.48.0", features = ["sync", "fs", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
config = { version = "0.15.19" }
tracing = { version = "0.1.43" }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "tracing-log", "time", "local-time", "json", "serde"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = { version = "0.31.1", features = ["experimental_use_tracing_span_context", "experimental_metadata_attributes"] }
opentelemetry-stdout = "0.31.0"
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"
tracing-core = "0.1.35"
serde_json = { version = "1.0.145", optional = true }
thiserror = "2.0.17"
local-ip-address = "0.6.5"

[dependencies.rdkafka]
version = "0.38.0"
optional = true

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration", "stream"]
optional = true

[features]
default = ["file"]
kafka = ["dep:rdkafka", "dep:serde_json"]
webhook = ["dep:reqwest"]
file = []
